--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ python = "^3.9"
 beautifulsoup4 = "^4.8"
 
 [tool.poetry.scripts]
-nova = "nova_playlist:main"
+nova = "nova_playlist.nova:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
