--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ repository = "https://github.com/rafikdraoui/nova-playlist"
 python = "^3.9"
 beautifulsoup4 = "^4.8"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+
 [tool.poetry.scripts]
 nova = "nova_playlist.nova:main"
 
