--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ python = "^3.9"
 pytest = "^7.2.0"
 
 [tool.poetry.scripts]
-nova = "nova_playlist.nova:main"
+nova = "nova_playlist.cli:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
