--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
+pytest-httpserver = "^1.0.6"
 
 [tool.poetry.scripts]
 nova = "nova_playlist.cli:main"
