--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,12 @@ repository = "https://github.com/rafikdraoui/nova-playlist"
 python = "^3.9"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.2.0"
-pytest-httpserver = "^1.0.6"
+pytest = "^7"
+pytest-httpserver = "^1"
 
 [tool.poetry.scripts]
 nova = "nova_playlist.cli:main"
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
